envs/lab01.one/gateway/route-esx11.yaml
---
kind: TLSRoute
apiVersion: networking.x-k8s.io/v1alpha1
metadata:
  name: route-esx11
  labels:
    gateway: gw-contour
spec:
  gateways:
    allow: All
  rules:
  - matches:
    - snis: [ esx11.lab01.one ]
    forwardTo:
    - serviceName: esx11
      port: 443
---
apiVersion: v1
kind: Service
metadata:
  name: esx11
spec:
  ports:
  - protocol: TCP
    port: 443
    targetPort: 443
  clusterIP: None
---
apiVersion: v1
kind: Endpoints
metadata:
  name: esx11
subsets:
  - addresses:
      - ip: 172.16.10.111
    ports:
      - port: 443
