envs/lab01.one/gateway/route-ps-web.yaml
kind: HTTPRoute
apiVersion: networking.x-k8s.io/v1alpha1
metadata:
  name: route-ps-web
  labels:
    gateway: gw-contour
spec:
  gateways:
    allow: All
  hostnames:
    - "planespotter.lab01.one"
  rules:
    - matches:
        - path:
            type: Prefix
            value: /
      forwardTo:
        - serviceName: ps-web
          port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ps-web
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  clusterIP: None
---
apiVersion: v1
kind: Endpoints
metadata:
  name: ps-web
subsets:
  - addresses:
      - ip: 172.16.7.10
    ports:
      - port: 80
